2007-12-21  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (XD_BASIC_DBUS_TYPE, XD_DBUS_TYPE_P, XD_NEXT_VALUE):
	New macros.
	(XD_SYMBOL_TO_DBUS_TYPE): Renamed from
	XD_LISP_SYMBOL_TO_DBUS_TYPE.
	(XD_OBJECT_TO_DBUS_TYPE): Renamed from
	XD_LISP_OBJECT_TO_DBUS_TYPE. Simplify.
	(xd_signature): New function.
	(xd_append_arg): Compute also signatures.  Major rewrite.
	(xd_retrieve_arg): Make debug messages friendly.
	(Fdbus_call_method, Fdbus_send_signal): Extend docstring.  Check
	for signatures of arguments.

2007-12-19  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (QCdbus_type_byte, QCdbus_type_boolean)
	(QCdbus_type_int16, QCdbus_type_uint16, QCdbus_type_int32)
	(QCdbus_type_uint32, QCdbus_type_int64, QCdbus_type_uint64)
	(QCdbus_type_double, QCdbus_type_string, QCdbus_type_object_path)
	(QCdbus_type_signature, QCdbus_type_array, QCdbus_type_variant)
	(QCdbus_type_struct, QCdbus_type_dict_entry): New D-Bus type
	symbols.
	(XD_LISP_SYMBOL_TO_DBUS_TYPE): New macro.
	(XD_LISP_OBJECT_TO_DBUS_TYPE): Add compound types.
	(xd_retrieve_value): Removed. Functionality included in ...
	(xd_append_arg): New function.
	(Fdbus_call_method, Fdbus_send_signal): Apply it.

2007-12-16  Michael Albinus  <michael.albinus@gmx.de>

	* dbusbind.c (top): Include <stdio.h>.
	(Fdbus_call_method, Fdbus_send_signal): Apply type cast in
	dbus_message_new_method_call and dbus_message_new_signal.
	(Fdbus_register_signal): Rename unique_name to uname.  Check
	handler for FUNCTIONP instead of CHECK_SYMBOL.  Handle case of
	non-existing unique name.  Fix typos in matching rule.  Return an
	object which is useful in Fdbus_unregister_signal.
	(Fdbus_unregister_signal): Reimplementation, in order to remove
	only the corresponding entry.
	(Vdbus_registered_functions_table): Change the order of entries.
	Apply these changes in xd_read_message and Fdbus_register_signal.

2007-12-16  Andreas Schwab  <schwab@suse.de>

	* fileio.c (Finsert_file_contents): Fix overflow check to not